src/antlr/ObjectScriptParser.ts
// Generated from ./src/antlr/ObjectScriptParser.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { ObjectScriptParserListener } from './ObjectScriptParserListener';
import { ObjectScriptParserVisitor } from './ObjectScriptParserVisitor';


export class ObjectScriptParser extends Parser {
	public static readonly ObjectMethod=1;
	public static readonly ObjectName=2;
	public static readonly Label=3;
	public static readonly RoutineName=4;
	public static readonly GlobalName=5;
	public static readonly SystemVariable=6;
	public static readonly SpecialGlobal=7;
	public static readonly MACMethodPrivate=8;
	public static readonly MACMethodPublic=9;
	public static readonly SQLBlock=10;
	public static readonly JSBlock=11;
	public static readonly HTMLBlock=12;
	public static readonly Property=13;
	public static readonly ID=14;
	public static readonly INT=15;
	public static readonly FLOAT=16;
	public static readonly STRING=17;
	public static readonly EOL=18;
	public static readonly EQUAL=19;
	public static readonly COMMA=20;
	public static readonly Dollar=21;
	public static readonly Colon=22;
	public static readonly DOT=23;
	public static readonly PLUS=24;
	public static readonly MINUS=25;
	public static readonly PERCENT=26;
	public static readonly AT=27;
	public static readonly SHARP=28;
	public static readonly EXCLAMATION=29;
	public static readonly QUESTON=30;
	public static readonly ASTERISK=31;
	public static readonly UNDERSCORE=32;
	public static readonly SLASH=33;
	public static readonly BACKSLASH=34;
	public static readonly COMMENT=35;
	public static readonly Spaces=36;
	public static readonly LPClass=37;
	public static readonly RPClass=38;
	public static readonly LPAREN=39;
	public static readonly RPAREN=40;
	public static readonly LBRACE=41;
	public static readonly RBRACE=42;
	public static readonly LBRACK=43;
	public static readonly RBRACK=44;
	public static readonly FUNCTION=45;
	public static readonly UserFunction=46;
	public static readonly Macros=47;
	public static readonly CARET=48;
	public static readonly VertBar=49;
	public static readonly WS=50;
	public static readonly WSNL=51;
	public static readonly CondOper=52;
	public static readonly Negative=53;
	public static readonly ObjectClass=54;
	public static readonly ObjectSuper=55;
	public static readonly ObjectThis=56;
	public static readonly Define=57;
	public static readonly DefineExpression=58;
	public static readonly Include=59;
	public static readonly CMDComments=60;
	public static readonly CommandDO=61;
	public static readonly CommandGOTO=62;
	public static readonly CommandJOB=63;
	public static readonly CMD=64;
	public static readonly CommandSPACE=65;
	public static readonly CommandCOLON=66;
	public static readonly CommandEOL=67;
	public static readonly CommandLBRACE=68;
	public static readonly CommandRBRACE=69;
	public static readonly CommandCOMMA=70;
	public static readonly Special=71;
	public static readonly CMDMacros=72;
	public static readonly RULE_code = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_blockStatement = 2;
	public static readonly RULE_comments = 3;
	public static readonly RULE_simpleStatement = 4;
	public static readonly RULE_macrosAsCommand = 5;
	public static readonly RULE_includeStatement = 6;
	public static readonly RULE_includeRtn = 7;
	public static readonly RULE_define = 8;
	public static readonly RULE_breakCommand = 9;
	public static readonly RULE_breakStatement = 10;
	public static readonly RULE_catchCommand = 11;
	public static readonly RULE_catchStatement = 12;
	public static readonly RULE_closeCommand = 13;
	public static readonly RULE_closeStatement = 14;
	public static readonly RULE_continueCommand = 15;
	public static readonly RULE_doCommand = 16;
	public static readonly RULE_doStatement = 17;
	public static readonly RULE_elseCommand1 = 18;
	public static readonly RULE_elseCommand2 = 19;
	public static readonly RULE_elseStatement = 20;
	public static readonly RULE_elseifCommand = 21;
	public static readonly RULE_forCommand = 22;
	public static readonly RULE_forStatement = 23;
	public static readonly RULE_forExpression = 24;
	public static readonly RULE_gotoCommand = 25;
	public static readonly RULE_gotoStatement = 26;
	public static readonly RULE_haltCommand = 27;
	public static readonly RULE_hangCommand = 28;
	public static readonly RULE_hangStatement = 29;
	public static readonly RULE_ifCommand = 30;
	public static readonly RULE_ifStatement = 31;
	public static readonly RULE_jobCommand = 32;
	public static readonly RULE_jobStatement = 33;
	public static readonly RULE_jobArgument = 34;
	public static readonly RULE_jobProcessParams = 35;
	public static readonly RULE_killCommand = 36;
	public static readonly RULE_killStatement = 37;
	public static readonly RULE_killArgument = 38;
	public static readonly RULE_lockCommand = 39;
	public static readonly RULE_lockStatement = 40;
	public static readonly RULE_lockArgument = 41;
	public static readonly RULE_lockArgument2 = 42;
	public static readonly RULE_mergeCommand = 43;
	public static readonly RULE_mergeStatement = 44;
	public static readonly RULE_mergeArgument = 45;
	public static readonly RULE_newCommand = 46;
	public static readonly RULE_newStatement = 47;
	public static readonly RULE_openCommand = 48;
	public static readonly RULE_openStatement = 49;
	public static readonly RULE_quitCommand = 50;
	public static readonly RULE_quitStatement = 51;
	public static readonly RULE_readCommand = 52;
	public static readonly RULE_readStatement = 53;
	public static readonly RULE_readArgument = 54;
	public static readonly RULE_setCommand = 55;
	public static readonly RULE_setStatement = 56;
	public static readonly RULE_setArgument = 57;
	public static readonly RULE_tcommitCommand = 58;
	public static readonly RULE_throwCommand = 59;
	public static readonly RULE_trollbackCommand = 60;
	public static readonly RULE_tryCommand = 61;
	public static readonly RULE_tryStatement = 62;
	public static readonly RULE_tstartCommand = 63;
	public static readonly RULE_useCommand = 64;
	public static readonly RULE_useStatement = 65;
	public static readonly RULE_viewCommand = 66;
	public static readonly RULE_viewStatement = 67;
	public static readonly RULE_whileCommand = 68;
	public static readonly RULE_whileStatement = 69;
	public static readonly RULE_writeCommand = 70;
	public static readonly RULE_writeStatement = 71;
	public static readonly RULE_writeArgument = 72;
	public static readonly RULE_xecuteCommand = 73;
	public static readonly RULE_xecuteStatement = 74;
	public static readonly RULE_xeceuteArgument = 75;
	public static readonly RULE_zkillCommand = 76;
	public static readonly RULE_zkillStatement = 77;
	public static readonly RULE_znspaceCommand = 78;
	public static readonly RULE_ztrapCommand = 79;
	public static readonly RULE_zwriteCommand = 80;
	public static readonly RULE_zwriteStatement = 81;
	public static readonly RULE_zzdumpCommand = 82;
	public static readonly RULE_zzdumpStatement = 83;
	public static readonly RULE_printCommand = 84;
	public static readonly RULE_printStatement = 85;
	public static readonly RULE_zbreakCommand = 86;
	public static readonly RULE_zbreakStatement = 87;
	public static readonly RULE_zinsertCommand = 88;
	public static readonly RULE_zloadCommand = 89;
	public static readonly RULE_zprintCommand = 90;
	public static readonly RULE_zremoveCommand = 91;
	public static readonly RULE_zsaveCommand = 92;
	public static readonly RULE_systemFunction = 93;
	public static readonly RULE_variable = 94;
	public static readonly RULE_localVariable = 95;
	public static readonly RULE_globalVariable = 96;
	public static readonly RULE_localVariableList = 97;
	public static readonly RULE_colonExpression = 98;
	public static readonly RULE_expression = 99;
	public static readonly RULE_simpleExpression = 100;
	public static readonly RULE_condition = 101;
	public static readonly RULE_pc = 102;
	public static readonly RULE_arguments = 103;
	public static readonly RULE_doClass = 104;
	public static readonly RULE_doRoutine = 105;
	public static readonly RULE_doArgument = 106;
	public static readonly RULE_labelDef = 107;
	public static readonly RULE_methodPublicVariables = 108;
	public static readonly RULE_methodContent = 109;
	public static readonly RULE_labelParameter = 110;
	public static readonly ruleNames: string[] = [
		"code", "statement", "blockStatement", "comments", "simpleStatement",
		"macrosAsCommand", "includeStatement", "includeRtn", "define", "breakCommand",
		"breakStatement", "catchCommand", "catchStatement", "closeCommand", "closeStatement",
		"continueCommand", "doCommand", "doStatement", "elseCommand1", "elseCommand2",
		"elseStatement", "elseifCommand", "forCommand", "forStatement", "forExpression",
		"gotoCommand", "gotoStatement", "haltCommand", "hangCommand", "hangStatement",
		"ifCommand", "ifStatement", "jobCommand", "jobStatement", "jobArgument",
		"jobProcessParams", "killCommand", "killStatement", "killArgument", "lockCommand",
		"lockStatement", "lockArgument", "lockArgument2", "mergeCommand", "mergeStatement",
		"mergeArgument", "newCommand", "newStatement", "openCommand", "openStatement",
		"quitCommand", "quitStatement", "readCommand", "readStatement", "readArgument",
		"setCommand", "setStatement", "setArgument", "tcommitCommand", "throwCommand",
		"trollbackCommand", "tryCommand", "tryStatement", "tstartCommand", "useCommand",
		"useStatement", "viewCommand", "viewStatement", "whileCommand", "whileStatement",
		"writeCommand", "writeStatement", "writeArgument", "xecuteCommand", "xecuteStatement",
		"xeceuteArgument", "zkillCommand", "zkillStatement", "znspaceCommand",
		"ztrapCommand", "zwriteCommand", "zwriteStatement", "zzdumpCommand", "zzdumpStatement",
		"printCommand", "printStatement", "zbreakCommand", "zbreakStatement",
		"zinsertCommand", "zloadCommand", "zprintCommand", "zremoveCommand", "zsaveCommand",
		"systemFunction", "variable", "localVariable", "globalVariable", "localVariableList",
		"colonExpression", "expression", "simpleExpression", "condition", "pc",
		"arguments", "doClass", "doRoutine", "doArgument", "labelDef", "methodPublicVariables",
		"methodContent", "labelParameter"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		"'$'", undefined, "'.'", undefined, undefined, "'%'", "'@'", "'#'", "'!'",
		"'?'", "'*'", undefined, "'/'", "'\\'", undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, "'^'", "'|'", undefined, undefined, undefined,
		"'''", undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, "'&'"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, "ObjectMethod", "ObjectName", "Label", "RoutineName", "GlobalName",
		"SystemVariable", "SpecialGlobal", "MACMethodPrivate", "MACMethodPublic",
		"SQLBlock", "JSBlock", "HTMLBlock", "Property", "ID", "INT", "FLOAT",
		"STRING", "EOL", "EQUAL", "COMMA", "Dollar", "Colon", "DOT", "PLUS", "MINUS",
		"PERCENT", "AT", "SHARP", "EXCLAMATION", "QUESTON", "ASTERISK", "UNDERSCORE",
		"SLASH", "BACKSLASH", "COMMENT", "Spaces", "LPClass", "RPClass", "LPAREN",
		"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "FUNCTION", "UserFunction",
		"Macros", "CARET", "VertBar", "WS", "WSNL", "CondOper", "Negative", "ObjectClass",
		"ObjectSuper", "ObjectThis", "Define", "DefineExpression", "Include",
		"CMDComments", "CommandDO", "CommandGOTO", "CommandJOB", "CMD", "CommandSPACE",
		"CommandCOLON", "CommandEOL", "CommandLBRACE", "CommandRBRACE", "CommandCOMMA",
		"Special", "CMDMacros"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ObjectScriptParser._LITERAL_NAMES, ObjectScriptParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return ObjectScriptParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "ObjectScriptParser.g4"; }

	@Override
	public get ruleNames(): string[] { return ObjectScriptParser.ruleNames; }

	@Override
	public get serializedATN(): string { return ObjectScriptParser._serializedATN; }


	  loopLevel: number = 0;
	  ifBlock: boolean = false;
	  elseBlock: boolean = false;
	  argsLevel: number = 0;
	  tryBlock: boolean = false;
	  catchBlock: boolean = false;
	  doBlock: boolean = false;
	  whileBlock: boolean = false;

	  cmp(cmds: string): boolean {
	    let val = this._input.LT(1).text;
	    let vars: string[] = cmds.toLowerCase().split(",");
	    return vars.includes(val.toLowerCase());
	  }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ObjectScriptParser._ATN, this);
	}
	@RuleVersion(0)
	public code(): CodeContext {
		let _localctx: CodeContext = new CodeContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ObjectScriptParser.RULE_code);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 225;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input,0,this._ctx);
			while ( _alt!==2 && _alt!==ATN.INVALID_ALT_NUMBER ) {
				if ( _alt===1 ) {
					{
					{
					this.state = 222;
					this.statement();
					}
					}
				}
				this.state = 227;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input,0,this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ObjectScriptParser.RULE_statement);
		let _la: number;
		try {
			this.state = 247;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,4,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 229;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input,1,this._ctx) ) {
				case 1:
					{
					this.state = 228;
					this.match(ObjectScriptParser.Spaces);
					}
					break;
				}
				this.state = 231;
				this.simpleStatement();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 232;
				this.match(ObjectScriptParser.Include);
				this.state = 233;
				this.match(ObjectScriptParser.Spaces);
				this.state = 234;
				this.includeStatement();
				this.state = 236;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===ObjectScriptParser.Spaces) {
					{
					this.state = 235;
					this.match(ObjectScriptParser.Spaces);
					}
				}

				this.state = 238;
				_la = this._input.LA(1);
				if ( !(_la===ObjectScriptParser.EOF || _la===ObjectScriptParser.EOL) ) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 240;
				this.define();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 241;
				this.comments();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 242;
				_la = this._input.LA(1);
				if ( !(_la===ObjectScriptParser.EOL || _la===ObjectScriptParser.Spaces || _la===ObjectScriptParser.CommandEOL) ) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 243;
				this.match(ObjectScriptParser.Label);
				this.state = 245;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input,3,this._ctx) ) {
				case 1:
					{
					this.state = 244;
					this.labelDef();
					}
					break;
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public blockStatement(quitWithoutArgs: boolean): BlockStatementContext {
		let _localctx: BlockStatementContext = new BlockStatementContext(this._ctx, this.state, quitWithoutArgs);
		this.enterRule(_localctx, 4, ObjectScriptParser.RULE_blockStatement);

		if(quitWithoutArgs) {this.loopLevel++;}

		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 249;
			_la = this._input.LA(1);
			if ( !(_la===ObjectScriptParser.LBRACE || _la===ObjectScriptParser.CommandLBRACE) ) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 253;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input,5,this._ctx);
			while ( _alt!==2 && _alt!==ATN.INVALID_ALT_NUMBER ) {
				if ( _alt===1 ) {
					{
					{
					this.state = 250;
					this.statement();
					}
					}
				}
				this.state = 255;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input,5,this._ctx);
			}
			this.state = 256;
			_la = this._input.LA(1);
			if ( !(_la===ObjectScriptParser.RBRACE || _la===ObjectScriptParser.CommandRBRACE) ) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
			this._ctx._stop = this._input.tryLT(-1);

			if(quitWithoutArgs) {this.loopLevel--;}

		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public comments(): CommentsContext {
		let _localctx: CommentsContext = new CommentsContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ObjectScriptParser.RULE_comments);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 258;
			this.match(ObjectScriptParser.COMMENT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public simpleStatement(): SimpleStatementContext {
		let _localctx: SimpleStatementContext = new SimpleStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ObjectScriptParser.RULE_simpleStatement);

		    // reset blocks
		    this.catchBlock = this.tryBlock;
		    this.tryBlock = false;
		    this.elseBlock = this.ifBlock;
		    this.ifBlock = false;
		    this.whileBlock = this.doBlock;
		    this.doBlock = false;

		let _la: number;
		try {
			this.state = 476;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,43,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 260;
				this.breakCommand();
				this.state = 262;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input,6,this._ctx) ) {
				case 1:
					{
					this.state = 261;
					this.pc();
					}
					break;
				}
				this.state = 264;
				this.breakStatement();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 266;
				this.catchCommand();
				this.state = 267;
				this.catchStatement();
				}
				break;
